--- a/index.html
+++ b/index.html
@@ -3,29 +3,45 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Frontend Mentor | Product preview card component</title>
-  
+
 </head>
 
 <body>
   <main>
-      Perfume
+    <div class="product-container">
+        <div class="product-image">
+          <img src="images/image-product-mobile.jpg" alt="Product image" class="image-mobile">
+          <img src="images/image-product-desktop.jpg" alt="Product image" class="image-desktop">
+        </div>
 
-      Gabrielle Essence Eau De Parfum
+        <div class="product-detail">
+            <div class="product-detail-title">
+              <p>Perfume</p>
+              <h1 class="dark-blue-text">Gabrielle Essence Eau De Parfum</h1>
+            </div>
 
-      A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-      Perfumer-Creator for the House of CHANEL.
+            <div class="product-detail-description">
+              <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+                Perfumer-Creator for the House of <span class="caps-text">CHANEL.</span></p>
+            </div>         
 
-      $149.99
-      $169.99
+            <div class="price">
+              <h1>$149.99</h1>
+              <p class="discount">$169.99</p>    
+            </div>
 
-      Add to Cart
-
+            <button> <img src="images/icon-cart.svg" alt="">Add to Cart</button>
+        </div>
+    </div>
+      
+  
     <footer class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a></p>
+      <span class="div-line">|</span> 
+      <p>Coded by <a href="https://www.frontendmentor.io/profile/Akintoyekolade">Akintoye Kolade Israel</a>.</p>
     </footer>
 
   </main>
