--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
             </div>
 
             <div class="product-detail-description">
-              <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+              <p class="dark-grayish-blue-text">A floral, solar and voluptuous interpretation composed by Olivier Polge, 
                 Perfumer-Creator for the House of <span class="caps-text">CHANEL.</span></p>
             </div>         
 
             <div class="price">
               <h1>$149.99</h1>
-              <p class="discount">$169.99</p>    
+              <p class="discount dark-grayish-blue-text">$169.99</p>    
             </div>
 
             <button> <img src="images/icon-cart.svg" alt="">Add to Cart</button>
