--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <p class="discount dark-grayish-blue-text">$169.99</p>    
             </div>
 
-            <button> <img src="images/icon-cart.svg" alt="">Add to Cart</button>
+            <button class="primary-button"> <img src="images/icon-cart.svg" alt="">Add to Cart</button>
         </div>
     </div>
       
