--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
   <main>
     <div class="product-container">
+      <div class="product-content">
         <div class="product-image">
           <img src="images/image-product-mobile.jpg" alt="Product image" class="image-mobile">
           <img src="images/image-product-desktop.jpg" alt="Product image" class="image-desktop">
@@ -35,6 +36,7 @@
 
             <button class="primary-button"> <img src="images/icon-cart.svg" alt="">Add to Cart</button>
         </div>
+      </div>
     </div>
       
   
